# kicad-mcp

./: .gitignore  README.md  claude-mcp-config.json  pyproject.toml
src/kicad_mcp/: __init__.py  __main__.py  cli.py  jlcpcb.py  library.py  pcb.py  schematic.py  server.py  sexp_parser.py  types.py
tests/: test_pcb.py  test_schematic.py  test_sexp_parser.py
tests/fixtures/: simple.kicad_pcb  simple.kicad_sch
